fix: "hard words" link word wrap on small screens

--- a/src/components/pages/vocabulary/_vocabulary.scss
+++ b/src/components/pages/vocabulary/_vocabulary.scss
@@ -114,7 +114,8 @@
     }
 
     & .page-selector,
-    & .page-switch {
+    & .page-switch,
+    & .page-selector-block {
       display: none;
     }
 
